# git_show_bigfiles

./: .gitignore  .gitlab-ci.yml  DEVGUIDE.md  GITLFS.MD  Makefile  README.MD  git-bigfile-tests.py  git_bigfile.py  git_bigfile_tests.py  git_show_bigfiles.py  git_show_bigfiles_tests.py  pyproject.toml  setup.cfg
.github/workflows/: unittests.yml
src/: __main__.py  git_show_bigfiles.py
tests/: functests.py
